apps/base/kubevirt-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  selector:
    app: kubevirt-manager
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
