apps/base/kubevirt-manager/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubevirt-manager
  namespace: kubevirt-manager
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`kubevirt.joesabbagh.com`)
      kind: Rule
      services:
        - name: kubevirt-manager
          port: 8080
  tls:
    secretName: kubevirt-manager-tls
